1.07 Thu Aug  12 22:11:46 UTC 2021
    - Upgrade to API Version 3
    - Fix book_ticker

1.06 Sun Jan  31 17:46:41 UTC 2021
    - Mock API responses for tests

1.05 Thu Nov  25 23:56:56 UTC 2020
    - Refactor signature generation
    - Update order parameters and requirements
    - Fix broken link in README

1.04 Thu Sep  10 09:29:15 UTC 2020
    - Remove PREREQ_FATAL

1.03 Sun Sep  08 14:15:36 UTC 2020

1.02 Sun May  22 22:57:25 UTC 2018

1.01 Sun May  22 22:32:18 UTC 2018
    - Released version 1.01
    - Fixed failing tests
    - Fixed POD errors

1.00 Sun May  20 19:34:55 UTC 2018
    - Released version 1.00