@@ -1,3 +1,6 @@
+Unreleased
+    - Support for cancelling all open orders
+
 1.07 Thu Aug  12 22:11:46 UTC 2021
     - Upgrade to API Version 3
     - Fix book_ticker
